--- a/css/styles.css
+++ b/css/styles.css
@@ -94,3 +94,49 @@ body {
 .book__is-read {
   color: var(--color-base-text);
 }
+
+.add-book-dialog {
+  max-width: 450px;
+  padding: 30px;
+  background-color: #c4dcff;
+}
+
+.add-book-dialog::backdrop {
+  background-color: rgba(3, 1, 20, 0.729);
+}
+
+.add-book-dialog__list {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  margin-bottom: 20px;
+  justify-content: center;
+}
+
+.add-book-dialog__list input[type='text'],
+.add-book-dialog__list input[type='number'] {
+  display: flex;
+  flex-direction: column;
+  height: 30px;
+  border: none;
+  border-radius: 10px;
+  padding: 0 10px;
+  font-size: 1.1rem;
+}
+
+.add-book-dialog__list input:focus {
+  outline: none;
+}
+
+.add-book-dialog__buttons {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.add-book-dialog button {
+  display: inline-block;
+  border: 2px solid black;
+  padding: 10px 0;
+  width: 100px;
+}
